logs/baguette-messaging.log
Listing '.'...
Listing './bin'...
Compiling './bin/pwiz.py'...
Listing './include'...
Listing './include/site'...
Listing './include/site/python3.5'...
Listing './include/site/python3.5/greenlet'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.11.egg-info'...
Listing './lib/python3.5/site-packages/amqp'...
Listing './lib/python3.5/site-packages/amqp-2.2.2.dist-info'...
Listing './lib/python3.5/site-packages/baguette_messaging-0.14.egg-info'...
Listing './lib/python3.5/site-packages/baguette_utils-0.12.egg-info'...
Listing './lib/python3.5/site-packages/farine'...
Listing './lib/python3.5/site-packages/farine/amqp'...
Listing './lib/python3.5/site-packages/farine/connectors'...
Listing './lib/python3.5/site-packages/farine/connectors/sql'...
Listing './lib/python3.5/site-packages/farine/log'...
Listing './lib/python3.5/site-packages/farine/rpc'...
Listing './lib/python3.5/site-packages/farine/stream'...
Listing './lib/python3.5/site-packages/farine/tests'...
Listing './lib/python3.5/site-packages/farine/tests/testfarine'...
Listing './lib/python3.5/site-packages/gevent'...
Compiling './lib/python3.5/site-packages/gevent/_util_py2.py'...
***   File "./lib/python3.5/site-packages/gevent/_util_py2.py", line 8
    raise type, value, tb
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gevent-1.1.1.dist-info'...
Listing './lib/python3.5/site-packages/greenlet-0.4.12.dist-info'...
Listing './lib/python3.5/site-packages/kombu'...
Listing './lib/python3.5/site-packages/kombu/async'...
Listing './lib/python3.5/site-packages/kombu/async/aws'...
Listing './lib/python3.5/site-packages/kombu/async/aws/sqs'...
Listing './lib/python3.5/site-packages/kombu/async/http'...
Listing './lib/python3.5/site-packages/kombu/transport'...
Listing './lib/python3.5/site-packages/kombu/transport/virtual'...
Listing './lib/python3.5/site-packages/kombu/utils'...
Listing './lib/python3.5/site-packages/kombu-4.0.2.dist-info'...
Listing './lib/python3.5/site-packages/peewee-2.10.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/playhouse'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests/packages'...
Listing './lib/python3.5/site-packages/requests/packages/chardet'...
Listing './lib/python3.5/site-packages/requests/packages/chardet/cli'...
Listing './lib/python3.5/site-packages/requests/packages/idna'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/util'...
Listing './lib/python3.5/site-packages/requests-2.14.2.dist-info'...
Listing './lib/python3.5/site-packages/sel'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/sseclient-0.0.18.egg-info'...
Listing './lib/python3.5/site-packages/vine'...
Listing './lib/python3.5/site-packages/vine-1.1.4.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
